[gd_scene load_steps=3 format=3 uid="uid://d0rq014idn1y7"]

[ext_resource type="Script" path="res://scripts/gui/multiplayer/game_lobby.gd" id="1_qmjnu"]
[ext_resource type="PackedScene" uid="uid://ccoi5byb8n26y" path="res://scenes/gui/player_icon.tscn" id="2_d2apx"]

[node name="GameLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmjnu")
player_scene = ExtResource("2_d2apx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -38.0
offset_right = 60.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="GameSettings" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="HBoxContainer/GameSettings"]
layout_mode = 2
text = "Voltar"

[node name="PlayersList" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/GameSettings/BackButton" to="." method="_on_back_button_pressed"]
